--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,86 +7,136 @@ jobs:
   secure-rdp:
     runs-on: windows-latest
     timeout-minutes: 3600
+
     steps:
       - name: Configure Core RDP Settings
+        shell: pwsh
         run: |
-          # Enable Remote Desktop and disable Network Level Authentication (if needed)
+          # Enable Remote Desktop & (opsional) disable NLA
           Set-ItemProperty -Path 'HKLM:\System\CurrentControlSet\Control\Terminal Server' `
-                                   -Name "fDenyTSConnections" -Value 0 -Force
+                           -Name "fDenyTSConnections" -Value 0 -Force
           Set-ItemProperty -Path 'HKLM:\System\CurrentControlSet\Control\Terminal Server\WinStations\RDP-Tcp' `
-                                   -Name "UserAuthentication" -Value 0 -Force
+                           -Name "UserAuthentication" -Value 0 -Force
           Set-ItemProperty -Path 'HKLM:\System\CurrentControlSet\Control\Terminal Server\WinStations\RDP-Tcp' `
-                                   -Name "SecurityLayer" -Value 0 -Force
-          netsh advfirewall firewall delete rule name="RDP-Tailscale"
-          netsh advfirewall firewall add rule name="RDP-Tailscale" `
-            dir=in action=allow protocol=TCP localport=3389
+                           -Name "SecurityLayer" -Value 0 -Force
+
+          # Firewall: allow inbound 3389
+          netsh advfirewall firewall delete rule name="RDP-Tailscale" | Out-Null
+          netsh advfirewall firewall add rule name="RDP-Tailscale" dir=in action=allow protocol=TCP localport=3389
+
+          # Restart RDP service
           Restart-Service -Name TermService -Force
 
       - name: Create RDP User with fixed credentials
+        shell: pwsh
         run: |
-          # <-- Membuat user Evan dengan password plaintext (untuk testing)
-          $plain = "Asukoe123456"
+          $username   = "Evan"
+          $plain      = "Asukoe123456"
           $securePass = ConvertTo-SecureString $plain -AsPlainText -Force
 
-          # Hapus user Evan dulu jika sudah ada (opsional, aman untuk testing ulang)
-          if (Get-LocalUser -Name "Evan" -ErrorAction SilentlyContinue) {
-              Remove-LocalUser -Name "Evan" -ErrorAction SilentlyContinue
+          # Remove if exists (idempotent for reruns)
+          if (Get-LocalUser -Name $username -ErrorAction SilentlyContinue) {
+            try { Remove-LocalUser -Name $username -ErrorAction SilentlyContinue } catch {}
           }
 
-          New-LocalUser -Name "Evan" -Password $securePass -AccountNeverExpires
-          Add-LocalGroupMember -Group "Administrators" -Member "Evan"
-          Add-LocalGroupMember -Group "Remote Desktop Users" -Member "Evan"
+          New-LocalUser -Name $username -Password $securePass -AccountNeverExpires
+          Add-LocalGroupMember -Group "Administrators" -Member $username
+          Add-LocalGroupMember -Group "Remote Desktop Users" -Member $username
 
-          # Simpan supaya bisa dibaca di step lain (akan muncul di logs jika dicetak)
-          echo "RDP_CREDS=User: Evan | Password: $plain" >> $env:GITHUB_ENV
+          echo "RDP_USER=$username"           >> $env:GITHUB_ENV
+          echo "RDP_PASS=$plain"              >> $env:GITHUB_ENV
+          echo "RDP_CREDS=User: $username | Password: $plain" >> $env:GITHUB_ENV
 
-          if (-not (Get-LocalUser -Name "Evan")) {
-              Write-Error "User creation failed"
-              exit 1
+          if (-not (Get-LocalUser -Name $username)) {
+            Write-Error "User creation failed"
+            exit 1
           }
 
-      - name: Install Tailscale
+      - name: Install Tailscale (robust)
+        shell: pwsh
         run: |
           $tsUrl = "https://pkgs.tailscale.com/stable/tailscale-setup-1.82.0-amd64.msi"
-          $installerPath = "$env:TEMP/tailscale.msi"
+          $installerPath = "$env:TEMP\tailscale.msi"
+
           Invoke-WebRequest -Uri $tsUrl -OutFile $installerPath
-          Start-Process msiexec.exe -ArgumentList "/i", "`"$installerPath`"", "/quiet", "/norestart" -Wait
-          Remove-Item $installerPath -Force
+          $p = Start-Process msiexec.exe -ArgumentList "/i", "`"$installerPath`"", "/qn", "/norestart" -Wait -PassThru
+          if ($p.ExitCode -ne 0) {
+            Write-Error "Tailscale MSI install failed with exit code $($p.ExitCode)"
+            exit 1
+          }
+
+          # Try common paths, then fallback to search
+          $candidates = @(
+            "$env:ProgramFiles\Tailscale LLC\Tailscale\tailscale.exe",
+            "$env:ProgramFiles\Tailscale\tailscale.exe",
+            "$env:ProgramFiles(x86)\Tailscale LLC\Tailscale\tailscale.exe",
+            "$env:ProgramFiles(x86)\Tailscale\tailscale.exe"
+          )
+          $tsExe = $null
+          for ($i=0; $i -lt 20 -and -not $tsExe; $i++) {
+            $tsExe = ($candidates | Where-Object { Test-Path $_ } | Select-Object -First 1)
+            if (-not $tsExe) {
+              try {
+                $found = Get-ChildItem -Path "$env:ProgramFiles*", "C:\ProgramData" -Recurse -Filter "tailscale.exe" -ErrorAction SilentlyContinue | Select-Object -First 1
+                if ($found) { $tsExe = $found.FullName }
+              } catch {}
+            }
+            if (-not $tsExe) { Start-Sleep -Seconds 2 }
+          }
+          if (-not $tsExe) {
+            Write-Error "tailscale.exe not found after install"
+            exit 1
+          }
+
+          echo "TS_EXE=$tsExe" >> $env:GITHUB_ENV
+          Write-Host "tailscale.exe at: $tsExe"
 
       - name: Establish Tailscale Connection
+        shell: pwsh
         run: |
-          & "$env:ProgramFiles\Tailscale\tailscale.exe" up --authkey=${{ secrets.TAILSCALE_AUTH_KEY }} --hostname=gh-runner-$env:GITHUB_RUN_ID
-          $tsIP = $null
-          $retries = 0
-          while (-not $tsIP -and $retries -lt 10) {
-              $tsIP = & "$env:ProgramFiles\Tailscale\tailscale.exe" ip -4
-              Start-Sleep -Seconds 5
-              $retries++
+          $tsExe = $env:TS_EXE
+          Write-Host "Using tailscale at: $tsExe"
+
+          # IMPORTANT: set your Tailscale auth key in repo/environment secrets as TAILSCALE_AUTH_KEY
+          & $tsExe up --authkey=${{ secrets.TAILSCALE_AUTH_KEY }} --hostname="gh-runner-$env:GITHUB_RUN_ID"
+          if ($LASTEXITCODE -ne 0) {
+            Write-Error "tailscale up failed with exit code $LASTEXITCODE"
+            exit $LASTEXITCODE
+          }
+
+          # Get IPv4 with retries
+          $tsIP = $null; $retries = 0
+          while (-not $tsIP -and $retries -lt 12) {
+            $tsIP = & $tsExe ip -4
+            if (-not $tsIP) { Start-Sleep -Seconds 5; $retries++ }
           }
           if (-not $tsIP) {
-              Write-Error "Tailscale IP not assigned. Exiting."
-              exit 1
+            Write-Error "Tailscale IP not assigned. Exiting."
+            exit 1
           }
           echo "TAILSCALE_IP=$tsIP" >> $env:GITHUB_ENV
+          Write-Host "Tailscale IP: $tsIP"
 
       - name: Verify RDP Accessibility
+        shell: pwsh
         run: |
           Write-Host "Tailscale IP: $env:TAILSCALE_IP"
           $testResult = Test-NetConnection -ComputerName $env:TAILSCALE_IP -Port 3389
           if (-not $testResult.TcpTestSucceeded) {
-              Write-Error "TCP connection to RDP port 3389 failed"
-              exit 1
+            Write-Error "TCP connection to RDP port 3389 failed"
+            exit 1
           }
           Write-Host "TCP connectivity successful!"
 
-      - name: Maintain Connection
+      - name: Maintain Connection (keep alive)
+        shell: pwsh
         run: |
           Write-Host "`n=== RDP ACCESS ==="
-          Write-Host "Address: $env:TAILSCALE_IP"
-          Write-Host "Username: Evan"
-          Write-Host "Password: $(echo $env:RDP_CREDS)"
+          Write-Host "Address : $env:TAILSCALE_IP"
+          Write-Host "Username: $env:RDP_USER"
+          Write-Host "Password: $env:RDP_PASS"
           Write-Host "==================`n"
           while ($true) {
-              Write-Host "[$(Get-Date)] RDP Active - Use Ctrl+C in workflow to terminate"
-              Start-Sleep -Seconds 300
+            Write-Host "[$(Get-Date)] RDP Active - Use Ctrl+C / cancel workflow to terminate"
+            Start-Sleep -Seconds 300
           }
