--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,24 +11,30 @@ on:
 jobs:
   setup-remote:
     runs-on: windows-latest
-    timeout-minutes: 3600
+    timeout-minutes: 360   # tahan sampai 6 jam; ubah sesuai kebutuhan
 
     steps:
       - name: Enable RDP & firewall
         shell: pwsh
         run: |
+          # Aktifkan RDP
           Set-ItemProperty -Path 'HKLM:\System\CurrentControlSet\Control\Terminal Server' -Name "fDenyTSConnections" -Value 0 -Force
+          # (opsional) nonaktifkan NLA untuk testing cepat
           Set-ItemProperty -Path 'HKLM:\System\CurrentControlSet\Control\Terminal Server\WinStations\RDP-Tcp' -Name "UserAuthentication" -Value 0 -Force
           Set-ItemProperty -Path 'HKLM:\System\CurrentControlSet\Control\Terminal Server\WinStations\RDP-Tcp' -Name "SecurityLayer" -Value 0 -Force
+
+          # Firewall allow 3389
           netsh advfirewall firewall delete rule name="RDP-Tailscale" | Out-Null
           netsh advfirewall firewall add rule name="RDP-Tailscale" dir=in action=allow protocol=TCP localport=3389
+
+          # Restart RDP service
           Restart-Service -Name TermService -Force
 
       - name: Use runneradmin for RDP (change password & ensure RDP group)
         shell: pwsh
         run: |
           $user = "runneradmin"
-          $pass = "Asukoe123456"
+          $pass = "Asukoe123456"   # <- testing; ganti kapan saja
           Set-LocalUser -Name $user -Password (ConvertTo-SecureString $pass -AsPlainText -Force)
           try { Add-LocalGroupMember -Group "Remote Desktop Users" -Member $user -ErrorAction Stop } catch {}
           echo "RDP_USER=$user" >> $env:GITHUB_ENV
@@ -42,6 +48,8 @@ jobs:
           Invoke-WebRequest -Uri $tsUrl -OutFile $installerPath
           $p = Start-Process msiexec.exe -ArgumentList "/i", "`"$installerPath`"", "/qn", "/norestart" -Wait -PassThru
           if ($p.ExitCode -ne 0) { Write-Error "Tailscale MSI install failed ($($p.ExitCode))"; exit 1 }
+
+          # Temukan tailscale.exe
           $candidates = @(
             "$env:ProgramFiles\Tailscale LLC\Tailscale\tailscale.exe",
             "$env:ProgramFiles\Tailscale\tailscale.exe",
@@ -61,6 +69,7 @@ jobs:
           }
           if (-not $tsExe) { Write-Error "tailscale.exe not found"; exit 1 }
           echo "TS_EXE=$tsExe" >> $env:GITHUB_ENV
+          Write-Host "tailscale.exe at: $tsExe"
 
       - name: Connect Tailscale
         shell: pwsh
@@ -68,10 +77,16 @@ jobs:
           $tsExe = $env:TS_EXE
           & $tsExe up --authkey=${{ secrets.TAILSCALE_AUTH_KEY }} --hostname="gh-runner-$env:GITHUB_RUN_ID"
           if ($LASTEXITCODE -ne 0) { Write-Error "tailscale up failed ($LASTEXITCODE)"; exit $LASTEXITCODE }
+
+          # Ambil IPv4 dengan retry
           $tsIP = $null; $retries = 0
-          while (-not $tsIP -and $retries -lt 12) { $tsIP = & $tsExe ip -4; if (-not $tsIP) { Start-Sleep -Seconds 5; $retries++ } }
+          while (-not $tsIP -and $retries -lt 12) {
+            $tsIP = & $tsExe ip -4
+            if (-not $tsIP) { Start-Sleep -Seconds 5; $retries++ }
+          }
           if (-not $tsIP) { Write-Error "No Tailscale IPv4"; exit 1 }
           echo "TAILSCALE_IP=$tsIP" >> $env:GITHUB_ENV
+          Write-Host "Tailscale IP: $tsIP"
 
       - name: Verify RDP port via Tailscale
         shell: pwsh
@@ -83,4 +98,69 @@ jobs:
       - name: Install StarDesk 1.0.1
         shell: pwsh
         run: |
-          $tmp
+          $tmp = "$env:TEMP\stardesk"; New-Item -ItemType Directory -Path $tmp -Force | Out-Null
+          $out = Join-Path $tmp "StarDesk_1.0.1.exe"
+
+          # 1) Pakai input kalau disediakan
+          $urlInput = "${{ github.event.inputs.STAR_DESK_URL }}"
+          $urls = @()
+          if ($urlInput -and $urlInput.Trim().Length -gt 0) { $urls += $urlInput.Trim() }
+
+          # 2) Kandidat URL umum ke file StarDesk_1.0.1.exe
+          $filename = "StarDesk_1.0.1.exe"
+          $urls += @(
+            "https://www.stardesk.net/$filename",
+            "https://www.stardesk.net/res/download/$filename",
+            "https://stardesk.net/$filename",
+            "https://download.stardesk.net/$filename",
+            "https://cdn.stardesk.net/$filename"
+          )
+
+          $success = $false
+          foreach ($u in $urls) {
+            try {
+              Write-Host "Trying $u"
+              Invoke-WebRequest -Uri $u -OutFile $out -UseBasicParsing -TimeoutSec 180 -MaximumRedirection 5
+              if ((Test-Path $out) -and ((Get-Item $out).Length -gt 2MB)) { $success = $true; break }
+            } catch {
+              Write-Host "Failed: $u"
+            }
+          }
+          if (-not $success) {
+            Write-Error "Gagal download StarDesk_1.0.1.exe. Jalankan lagi dan isi input STAR_DESK_URL (link langsung dari tombol 'StarDesk for Windows')."
+            exit 1
+          }
+
+          # Coba silent switches umum; jika gagal, jalankan normal
+          $args = @("/S", "/silent", "/verysilent")
+          $installed = $false
+          foreach ($a in $args) {
+            try {
+              $p = Start-Process -FilePath $out -ArgumentList $a -Wait -PassThru -WindowStyle Hidden
+              if ($p.ExitCode -eq 0) { $installed = $true; break }
+            } catch {}
+          }
+          if (-not $installed) {
+            Write-Host "Silent unknown; running without switches..."
+            Start-Process -FilePath $out -Wait
+          }
+          Write-Host "StarDesk installer executed."
+
+      - name: Show connection info & keep alive
+        shell: pwsh
+        timeout-minutes: 360
+        run: |
+          Write-Host "`n=== RDP ACCESS ==="
+          Write-Host "Address : $env:TAILSCALE_IP"
+          Write-Host "Username: $env:RDP_USER"
+          Write-Host "Password: $env:RDP_PASS"
+          Write-Host "==================`n"
+
+          # Pastikan port 3389 listen
+          try { Get-NetTCPConnection -LocalPort 3389 -State Listen | Out-Host } catch {}
+
+          # Keep runner hidup
+          while ($true) {
+            Write-Host "[$(Get-Date)] RDP Active - Cancel workflow to terminate"
+            Start-Sleep -Seconds 300
+          }
