--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,21 +22,24 @@ jobs:
 
       - name: Install Tailscale
         run: |
-          # Download Tailscale for macOS (using direct pkg link)
+          # Download Tailscale for macOS
           curl -L -o /tmp/Tailscale.pkg "https://pkgs.tailscale.com/stable/Tailscale-1.82.0-macos.pkg"
           
           # Install Tailscale
           sudo installer -pkg /tmp/Tailscale.pkg -target /
           
-          # Wait for installation to complete
+          # Wait for installation
           sleep 5
           
-          # Start Tailscale
-          open -a Tailscale
-          sleep 5
+          # Start Tailscale daemon in background
+          sudo /Applications/Tailscale.app/Contents/MacOS/Tailscale up --authkey=${{ secrets.TAILSCALE_AUTH_KEY }} --hostname=gh-mac-${{ github.run_id }} --accept-routes &
           
-          # Connect to Tailscale
-          /Applications/Tailscale.app/Contents/MacOS/Tailscale up --authkey=${{ secrets.TAILSCALE_AUTH_KEY }} --hostname=gh-mac-${{ github.run_id }} --accept-routes
+          # Wait for Tailscale to connect
+          echo "Waiting for Tailscale to connect..."
+          sleep 15
+          
+          # Check status
+          sudo /Applications/Tailscale.app/Contents/MacOS/Tailscale status || true
 
       - name: Enable VNC Screen Sharing
         run: |
@@ -74,21 +77,25 @@ jobs:
       - name: Get Tailscale IP
         run: |
           # Wait for Tailscale to get IP
-          sleep 10
+          sleep 5
           
           retries=0
-          while [ $retries -lt 10 ]; do
-            TSIP=$(/Applications/Tailscale.app/Contents/MacOS/Tailscale ip -4 2>/dev/null)
+          while [ $retries -lt 20 ]; do
+            TSIP=$(sudo /Applications/Tailscale.app/Contents/MacOS/Tailscale ip -4 2>/dev/null || true)
             if [ ! -z "$TSIP" ]; then
               echo "TAILSCALE_IP=$TSIP" >> $GITHUB_ENV
+              echo "✓ Got Tailscale IP: $TSIP"
               break
             fi
-            sleep 5
+            echo "⏳ Waiting for Tailscale IP... attempt $((retries + 1))/20"
+            sleep 3
             retries=$((retries + 1))
           done
           
           if [ -z "$TSIP" ]; then
-            echo "Failed to get Tailscale IP"
+            echo "❌ Failed to get Tailscale IP"
+            echo "Tailscale Status:"
+            sudo /Applications/Tailscale.app/Contents/MacOS/Tailscale status
             exit 1
           fi
 
